Fix page header letter spacing

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -92,7 +92,8 @@ body {
 	background-color: $gray-lightest;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
 	letter-spacing: -0.5px;
 }
 
